UserList aggregation added. Unnecessary endpoints removed.
