# docs/swagger.json
@@ -688,6 +688,16 @@
                 "summary": "Get User List by User ID",
                 "parameters": [
                     {
+                        "enum": [
+                            "score",
+                            "timeswatched"
+                        ],
+                        "type": "string",
+                        "name": "sort",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "string",
                         "description": "Authentication header",
                         "name": "Authorization",
@@ -824,62 +834,6 @@
             }
         },
         "/list/anime": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns anime list by user id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user_list"
-                ],
-                "summary": "Get Anime List by User ID",
-                "parameters": [
-                    {
-                        "enum": [
-                            "popularity",
-                            "new",
-                            "old",
-                            "score"
-                        ],
-                        "type": "string",
-                        "name": "sort",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/responses.AnimeList"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -1000,62 +954,6 @@
             }
         },
         "/list/game": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns game list by user id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user_list"
-                ],
-                "summary": "Get Game List by User ID",
-                "parameters": [
-                    {
-                        "enum": [
-                            "popularity",
-                            "new",
-                            "old",
-                            "score"
-                        ],
-                        "type": "string",
-                        "name": "sort",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/responses.GameList"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -1176,62 +1074,6 @@
             }
         },
         "/list/movie": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns movie watch list by user id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user_list"
-                ],
-                "summary": "Get Movie Watch List by User ID",
-                "parameters": [
-                    {
-                        "enum": [
-                            "popularity",
-                            "new",
-                            "old",
-                            "score"
-                        ],
-                        "type": "string",
-                        "name": "sort",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/responses.MovieList"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -1352,62 +1194,6 @@
             }
         },
         "/list/tv": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns tv series watch list by user id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user_list"
-                ],
-                "summary": "Get TV Series Watch List by User ID",
-                "parameters": [
-                    {
-                        "enum": [
-                            "popularity",
-                            "new",
-                            "old",
-                            "score"
-                        ],
-                        "type": "string",
-                        "name": "sort",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/responses.TVSeriesList"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -4011,14 +3797,20 @@
                 "_id": {
                     "type": "string"
                 },
-                "anime": {
-                    "$ref": "#/definitions/responses.Anime"
-                },
                 "anime_id": {
                     "type": "string"
                 },
-                "anime_mal_id": {
+                "content_status": {
                     "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "is_airing": {
+                    "type": "boolean"
+                },
+                "mal_id": {
+                    "type": "integer"
                 },
                 "score": {
                     "type": "number"
@@ -4029,7 +3821,16 @@
                 "times_finished": {
                     "type": "integer"
                 },
-                "user_id": {
+                "title_en": {
+                    "type": "string"
+                },
+                "title_original": {
+                    "type": "string"
+                },
+                "total_episodes": {
+                    "type": "integer"
+                },
+                "type": {
                     "type": "string"
                 },
                 "watched_episodes": {
@@ -4367,13 +4168,19 @@
                 "achievement_status": {
                     "type": "number"
                 },
-                "game": {
-                    "$ref": "#/definitions/responses.Game"
+                "content_status": {
+                    "type": "string"
                 },
                 "game_id": {
                     "type": "string"
                 },
-                "game_rawg_id": {
+                "hours_played": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "rawg_id": {
                     "type": "integer"
                 },
                 "score": {
@@ -4382,10 +4189,16 @@
                 "status": {
                     "type": "string"
                 },
+                "tba": {
+                    "type": "boolean"
+                },
                 "times_finished": {
                     "type": "integer"
                 },
-                "user_id": {
+                "title": {
+                    "type": "string"
+                },
+                "title_original": {
                     "type": "string"
                 }
             }
@@ -4664,13 +4477,13 @@
                 "_id": {
                     "type": "string"
                 },
-                "movie": {
-                    "$ref": "#/definitions/responses.Movie"
-                },
-                "movie_id": {
+                "content_status": {
                     "type": "string"
                 },
-                "movie_tmdb_id": {
+                "image_url": {
+                    "type": "string"
+                },
+                "movie_id": {
                     "type": "string"
                 },
                 "score": {
@@ -4682,7 +4495,13 @@
                 "times_finished": {
                     "type": "integer"
                 },
-                "user_id": {
+                "title_en": {
+                    "type": "string"
+                },
+                "title_original": {
+                    "type": "string"
+                },
+                "tmdb_id": {
                     "type": "string"
                 }
             }
@@ -4989,6 +4808,12 @@
                 "_id": {
                     "type": "string"
                 },
+                "content_status": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
                 "score": {
                     "type": "number"
                 },
@@ -4998,16 +4823,22 @@
                 "times_finished": {
                     "type": "integer"
                 },
+                "title_en": {
+                    "type": "string"
+                },
+                "title_original": {
+                    "type": "string"
+                },
+                "tmdb_id": {
+                    "type": "string"
+                },
+                "total_episodes": {
+                    "type": "integer"
+                },
+                "total_seasons": {
+                    "type": "integer"
+                },
                 "tv_id": {
-                    "type": "string"
-                },
-                "tv_series": {
-                    "$ref": "#/definitions/responses.TVSeries"
-                },
-                "tv_tmdb_id": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 },
                 "watched_episodes": {
@@ -5195,6 +5026,12 @@
                 "anime_count": {
                     "type": "integer"
                 },
+                "anime_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.AnimeList"
+                    }
+                },
                 "anime_total_finished": {
                     "type": "integer"
                 },
@@ -5206,6 +5043,12 @@
                 },
                 "game_count": {
                     "type": "integer"
+                },
+                "game_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.GameList"
+                    }
                 },
                 "game_total_finished": {
                     "type": "integer"
@@ -5222,6 +5065,12 @@
                 "movie_total_finished": {
                     "type": "integer"
                 },
+                "movie_watch_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.MovieList"
+                    }
+                },
                 "slug": {
                     "type": "string"
                 },
@@ -5236,6 +5085,12 @@
                 },
                 "tv_total_watched_episodes": {
                     "type": "integer"
+                },
+                "tv_watch_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.TVSeriesList"
+                    }
                 },
                 "user_id": {
                     "type": "string"
